# gazebo-auv-sim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  common.h  convert.h  exception.h  ipc_message.h  main.cpp  policy.h  transport_pipe.h
gazebo-plugins/: CMakeLists.txt  auv_body.sdf  camera_plugin.cc  iacp_auv.dae  imu_plugin.cc  orange_stripe.dae  orange_stripe.sdf  robosub_auv.sdf  robosub_auv_plugin.cc  robosub_world.sdf  singapore-2015-scena.dae  singapore_scena.dae  torpedo.dae  torpedo.sdf
gazebo-plugins/auv_body/: auv_body.sdf  model.config
gazebo-plugins/gripper/: gripper.sdf  model.config
gazebo-plugins/orange_stripe/: model.config  orange_stripe.sdf
gazebo-plugins/torpedo/: Find Results  model.config  torpedo.sdf
ipc-gazebo-adapter/: CMakeLists.txt  common.h  convert.cpp  convert.h  globals.cpp  globals.h  main.cpp  policy.cpp  policy.h  test.cpp  transport_pipe.h
ipc-gazebo-adapter/tests/: CMakeLists.txt  regul_test.cpp
msgs/: CMakeLists.txt  camera.proto  compass.proto  dvl.proto  gripper.proto  navig.proto  regul.proto  shoot.proto  switch_camera.proto
